[gd_scene load_steps=5 format=3 uid="uid://0wan7nt5gney"]

[ext_resource type="Script" uid="uid://d0yl56gloome3" path="res://scripts/post.gd" id="1_gvxlr"]
[ext_resource type="Texture2D" uid="uid://drb4acynk0pnx" path="res://images/Post Icons/Post Catburgler.png" id="2_gvxlr"]
[ext_resource type="Script" uid="uid://dgxtmu1llxe6" path="res://prefabs/prefabs scripts/post_thief.gd" id="3_gvxlr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tc63t"]
size = Vector2(19.235422, 19.63567)

[node name="thiefPost" type="Node2D"]
script = ExtResource("1_gvxlr")

[node name="PostThief" type="Sprite2D" parent="."]
position = Vector2(0.5, -46.5)
texture = ExtResource("2_gvxlr")
script = ExtResource("3_gvxlr")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -103.00001
offset_top = 56.0
offset_right = 100.99999
offset_bottom = 162.5506
scale = Vector2(1.0145473, 1.1074551)
color = Color(0.05882353, 0.13333334, 0.16470589, 1)

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 2.9569926
offset_right = 42.956993
offset_bottom = 52.107826
scale = Vector2(4.9446335, 1.9581653)
color = Color(0.627451, 1, 1, 1)

[node name="flavourText" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 5.4363785
offset_top = 0.4478531
offset_right = 210.43637
offset_bottom = 110.44785
scale = Vector2(0.9209255, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Cat-burgler caught in action, stereotypes enforced!
+ 3 Rage"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -103.0
offset_top = -150.0
offset_right = -95.0
offset_bottom = -142.0
scale = Vector2(26.000011, 37.05496)

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2(-72, -142)
scale = Vector2(4.92, 1)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(14.735774, 140)
scale = Vector2(2.1872756, 15.074606)
shape = SubResource("RectangleShape2D_tc63t")

[node name="Timer" type="Timer" parent="."]

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
